--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1,7 +1,7 @@
 /* purgecss start ignore */
-
 @tailwind base;
 @tailwind components;
+@tailwind utilities;
 
 html {
   font-family: "Rubik", sans-serif;
